--- a/CopaFilmes.Api/Properties/launchSettings.json
+++ b/CopaFilmes.Api/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "/api/Home/Index",
+      "launchUrl": "api/Home/Index",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "CopaFilmes.Api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "/api/Home/Index",
+      "launchUrl": "api/Home/Index",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
