--- a/CopaFilmes.Api/Properties/launchSettings.json
+++ b/CopaFilmes.Api/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:24341",
+      "applicationUrl": "https://localhost:5001",
       "sslPort": 44317
     }
   },
