--- a/CopaFilmes.Core/CopaFilmes.Core.csproj
+++ b/CopaFilmes.Core/CopaFilmes.Core.csproj
@@ -8,6 +8,8 @@
     <Folder Include="Modelos\" />
     <Folder Include="Core\" />
     <Folder Include="Injection\" />
+    <Folder Include="Core\Interfaces\" />
+    <Folder Include="Core\Classes\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
